--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,20 +1,45 @@
-.header img{
-    height: 80px;
+.header {
+  text-align: center;
 }
-.header{
-    text-align: center;
+.header img {
+  height: 80px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
-.header nav{
-    background-color: black;
-    line-height: 40px;
-    font-size: 20px;
+
+.header nav {
+  background-color: #5b58ed;
+  line-height: 40px;
+  font-size: 20px;
+  padding: 5px;
+  position: relative;
 }
-nav a{
-    text-decoration: none;
-    color: white;
-    margin-right: 20px;
-    padding: 5px;
+nav a {
+  text-decoration: none;
+  color: white;
+  margin-right: 20px;
+  padding: 5px;
+  transition: all 0.2s ease;
 }
-nav a:hover{
-    background-color: gray;
+nav button {
+  margin-right: 20px;
+  background-color: transparent;
+  color: white;
+  border: none;
+  outline: none;
+  transition: all 0.2s ease;
+}
+nav a:hover,
+button:hover,
+button:focus,
+button:active {
+  color: #ffa14a;
+  text-decoration: none;
+  outline: none;
+}
+nav .logged-in-user {
+  color: white;
+  display: inline;
+  position: absolute;
+  right: 2rem;
 }
