--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,19 +1,32 @@
-.product{
-    display: flex;
-    border-bottom: 1px solid lightgray;
-    margin-bottom: 5px;
-    margin-right: 10px;
-    padding-bottom: 5px;
+.product {
+  display: flex;
+  border-bottom: 1px solid #c2c0dd;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
-.product-name{
-    color: blue;
-    font-weight: 400;
+.product-details-single {
+  margin-left: 2rem;
 }
-.main-button{
-    background-color: goldenrod;
-    width: 150px;
-    height: 30px;
-    border: 1px solid darkgray;
-    border-radius: 5px;
-    cursor: pointer;
+.product-name a {
+  color: #090b2b;
+  font-weight: 500;
+  text-decoration: none;
+}
+.product-name a:hover {
+  color: #5b58ed;
+}
+.main-button {
+  background-color: #ffa14a;
+  width: 150px;
+  height: 35px;
+  border: none;
+  border-radius: 0.2rem;
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+.main-button:hover {
+  color: white;
+  background-color: #5b58ed;
 }
