--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,9 +1,33 @@
-.twin-container{
-    display: flex;
+.twin-container {
+  display: flex;
 }
-.product-container{
-    width: 70%;
-    margin-left: 20px;
-    margin-right: 5px;
-    border-right: 1px solid lightgray;
+.product-container {
+  width: 70%;
+  margin-left: 20px;
+  margin-right: 5px;
+  border-right: 1px solid #c2c0dd;
+}
+.product-container .input-div {
+  margin: 3rem auto 3rem auto;
+  display: flex;
+  justify-content: center;
+}
+.product-container input {
+  border: 2px solid #c2c0dd;
+  outline: none;
+  border-radius: 0.2rem;
+  height: 2.5rem;
+  max-width: 35rem;
+  width: 70%;
+}
+.product-container input:focus {
+  border: 2px solid #5b58ed;
+}
+.product-container input:active {
+  border: 2px solid #5b58ed;
+}
+.search-btn {
+  height: 2.5rem;
+  background-color: #5b58ed;
+  color: #fff;
 }
